--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,3 @@
-*{
-  color: whitesmoke;
-}
-
 h3.done{
   color: green;  
   border: solid green 1px;
@@ -30,4 +26,7 @@ h3.err{
 }
 p{
   margin:5px
+}
+.dark h2{
+  color: whitesmoke;
 }
